update button css

--- a/src/components/element/buttons/button.css
+++ b/src/components/element/buttons/button.css
@@ -2,7 +2,7 @@
 
 .primary-button {
     padding: 15px 25px;
-    background-color: #1d6ad0;
+    background-color: #4b7bec;
     color: #fff;
     font-size: 16px;
     font-family: helvetica neue;
@@ -17,7 +17,7 @@
 }
 
 .primary-button:hover {
-    background-color: #0a52b3;
+    background-color: #3867d6;
     transition: background-color 0.5s ease;
 }
 
@@ -38,16 +38,16 @@
 .primary-button-ghost {
     padding: 15px 25px;
     background-color: #fff;
-    color: #0253c1;
+    color: #3867d6;
     font-size: 16px;
     font-family: helvetica neue;
-    border: 2px solid #0253c1;
+    border: 2px solid #3867d6;
     border-radius: 8px;
     font-weight: 600;
     cursor: pointer;
 }
 .primary-button-ghost:hover {
-    background-color: #1d6ad0;
+    background-color: #4b7bec;
     transition: background-color 0.5s ease;
     color: #fff;
     font-weight: 600;
@@ -73,35 +73,35 @@
 
 /* color variations primary green*/
 button.primary-button.green {
-    background-color: #45ab75;
+    background-color: #20bf6b;
 }
 button.primary-button.green:hover {
-    background-color: #2d8c5a;
+    background-color: #1ba15a;
 }
 button.primary-button-ghost.green {
-    color: #2d8c5a;
-    border-color: #45ab75;
+    color: #1ba15a;
+    border-color: #1ba15a;
 }
 button.primary-button-ghost.green:hover {
     color: #fff;
-    background-color: #45ab75;
+    background-color: #20bf6b;
     border-color: #00000033;
 }
 
 /* color variations primary pink*/
 button.primary-button.pink {
-    background-color: #e4426b;
+    background-color: #fc5c65;
 }
 button.primary-button.pink:hover {
-    background-color: #c8274d;
+    background-color: #eb3b5a;
 }
 button.primary-button-ghost.pink {
-    color: #c8274d;
-    border-color: #e4426b;
+    color: #fc5c65;
+    border-color: #fc5c65;
 }
 button.primary-button-ghost.pink:hover {
     color: #fff;
-    background-color: #e4426b;
+    background-color: #fc5c65;
     border-color: #00000033;
 }
 
@@ -109,7 +109,7 @@ button.primary-button-ghost.pink:hover {
 
 .secondary-button {
     padding: 10px 20px;
-    background-color: #1d6ad0;
+    background-color: #4b7bec;
     color: #fff;
     font-size: 14px;
     font-family: helvetica neue;
@@ -124,7 +124,7 @@ button.primary-button-ghost.pink:hover {
 }
 
 .secondary-button:hover {
-    background-color: #0a52b3;
+    background-color: #3867d6;
     transition: background-color 0.5s ease;
 }
 
@@ -145,16 +145,16 @@ button.primary-button-ghost.pink:hover {
 .secondary-button-ghost {
     padding: 10px 20px;
     background-color: #fff;
-    color: #0253c1;
+    color: #3867d6;
     font-size: 14px;
     font-family: helvetica neue;
-    border: 2px solid #0253c1;
+    border: 2px solid #3867d6;
     border-radius: 8px;
     font-weight: 400;
     cursor: pointer;
 }
 .secondary-button-ghost:hover {
-    background-color: #1d6ad0;
+    background-color: #4b7bec;
     transition: background-color 0.5s ease;
     color: #fff;
     font-weight: 400;
@@ -180,35 +180,35 @@ button.primary-button-ghost.pink:hover {
 
 /* color variations secondary green*/
 button.secondary-button.green {
-    background-color: #45ab75;
+    background-color: #20bf6b;
 }
 button.secondary-button.green:hover {
-    background-color: #2d8c5a;
+    background-color: #1ba15a;
 }
 button.secondary-button-ghost.green {
-    color: #2d8c5a;
-    border-color: #45ab75;
+    color: #1ba15a;
+    border-color: #1ba15a;
 }
 button.secondary-button-ghost.green:hover {
     color: #fff;
-    background-color: #45ab75;
+    background-color: #20bf6b;
     border-color: #00000033;
 }
 
 /* color variations secondary pink*/
 button.secondary-button.pink {
-    background-color: #e4426b;
+    background-color: #fc5c65;
 }
 button.secondary-button.pink:hover {
-    background-color: #c8274d;
+    background-color: #eb3b5a;
 }
 button.secondary-button-ghost.pink {
-    color: #c8274d;
-    border-color: #e4426b;
+    color: #fc5c65;
+    border-color: #fc5c65;
 }
 button.secondary-button-ghost.pink:hover {
     color: #fff;
-    background-color: #e4426b;
+    background-color: #fc5c65;
     border-color: #00000033;
 }
 
@@ -217,7 +217,7 @@ button.secondary-button-ghost.pink:hover {
 .tertiary-button {
     padding: 10px 20px;
     background-color: none;
-    color: #1d6ad0;
+    color: #4b7bec;
     font-size: 14px;
     font-family: helvetica neue;
     border: none;
@@ -230,7 +230,7 @@ button.secondary-button-ghost.pink:hover {
 }
 
 .tertiary-button:hover {
-    color: #0a52b3;
+    color: #3867d6;
     transition: color 0.5s ease;
 }
 
@@ -249,18 +249,18 @@ button.secondary-button-ghost.pink:hover {
 
 /* color variations tertiary green*/
 button.tertiary-button.green {
-    color: #45ab75;
+    color: #20bf6b;
 }
 button.tertiary-button.green:hover {
-    color: #2d8c5a;
+    color: #1ba15a;
 }
 
 /* color variations tertiary pink*/
 button.tertiary-button.pink {
-    color: #e4426b;
+    color: #fc5c65;
 }
 button.tertiary-button.pink:hover {
-    color: #c8274d;
+    color: #eb3b5a;
 }
 
 /* Social media button css */
