--- a/src/components/element/color pallet/color-swatch.css
+++ b/src/components/element/color pallet/color-swatch.css
@@ -1,7 +1,7 @@
 .swatch {
-    width: 70px;
-    height: 70px;
-    border-radius: 12px;
+    width: 5vw;
+    height: 5vw;
+    border-radius: 1vw;
     cursor: pointer;
     margin-right: 30px;
     margin-left: 30px;
