add home page content and fix button padding

--- a/src/components/layout/navigation.css
+++ b/src/components/layout/navigation.css
@@ -1,7 +1,7 @@
 .sidenav---sidenav---_2tBP {
     position: sticky !important;
     height: 100vh !important;
-    background-color: #0f78ca !important;
+    background-color: #826892 !important;
 }
 .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL
     .sidenav---sidenav-subnav---1EN61
@@ -85,5 +85,5 @@
 .sidenav---sidenav-subnav---1EN61
     > .sidenav---sidenav-subnavitem---1cD47.sidenav---selected---1EK3y
     > .sidenav---navitem---9uL5T {
-    color: #0f78ca !important;
+    color: #826892 !important;
 }
